--- a/contacts.html
+++ b/contacts.html
@@ -59,7 +59,7 @@
 						<li class="menu__item"><a href="">Портфолио</a></li>
 						<li class="menu__item"><a href="">Услуги и цены</a></li>
 						<li class="menu__item"><a href="">Новости</a></li>
-						<li class="menu__item"><a href="">Контакты</a></li>
+						<li class="menu__item -active"><a href="">Контакты</a></li>
 					</ul>
 					<ul class="header__menu-mobile menu-mobile">
 						<li class="menu-mobile__item"><a href="">Главная</a></li>
