--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					</div>
 					<div class="header__center col-sm-6 col-md-8">
 						<ul class="header__menu menu">
-							<li class="menu__item"><a href="">Главная</a></li>
+							<li class="menu__item -active"><a href="">Главная</a></li>
 							<li class="menu__item"><a href="">О нас</a></li>
 							<li class="menu__item"><a href="">Портфолио</a></li>
 							<li class="menu__item"><a href="">Услуги и цены</a></li>
@@ -59,17 +59,17 @@
 		<div class="slider-video">
 			<div class="slider-video__item">
 				<video autoplay="autoplay" loop="loop" muted="muted" playsinline="">
-					<source src="video/production ID_4112424.mp4">
+					<source src="video/video1.mp4">
 				</video>
 			</div>
 			<div class="slider-video__item">
 				<video autoplay="autoplay" loop="loop" muted="muted" playsinline="">
-					<source src="video/production ID_3773487.mp4">
+					<source src="video/video2.mp4">
 				</video>
 			</div>
 			<div class="slider-video__item">
 				<video autoplay="autoplay" loop="loop" muted="muted" playsinline="">
-					<source src="video/pexels-polina-kovaleva-5644278.mp4">
+					<source src="video/video3.mp4">
 				</video>
 			</div>
 		</div>
